Replace navigation with social media links

--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -6,12 +6,11 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="../index.html">Inicio</a>
-            <a href="sobremi.html">Sobre mí</a>
-            <a href="estudios.html">Estudios</a>
-            <a href="contactos.html">Contacto</a>
-        </nav>
+        <div class="redes-container">
+            <a href="https://www.instagram.com/nicoocruuzz_/"><img src="../imagenes/instagram.jpg" alt="Instagram" style="width:40px;"></a>
+            <a href="https://www.facebook.com/nicoocruuzz_/"><img src="../imagenes/facebook.jpg" alt="Facebook" style="width:40px;"></a>
+            <a href="https://www.x.com/nicoocruzz_/"><img src="../imagenes/x.jpg" alt="X" style="width:40px;"></a>
+        </div>
     </header>
     <section>
         <h1>Sobre mí</h1>
