Update social media links container in contactos.html

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -31,7 +31,7 @@
 
             <button>Enviar</button>
         </form>
-        <div style="display:flex; gap:20px; margin-bottom:20px;">
+        <div class="redes-container">
             <a href="https://www.instagram.com/nicoocruuzz_/"><img src="../imagenes/instagram.jpg" alt="Instagram" style="width:40px;"></a>
             <a href="https://www.facebook.com/nicoocruuzz_/"><img src="../imagenes/facebook.jpg" alt="Facebook" style="width:40px;"></a>
             <a href="https://www.x.com/nicoocruzz_/"><img src="../imagenes/x.jpg" alt="X" style="width:40px;"></a>
