--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -17,25 +17,25 @@
         <h1>Contacto</h1>
         <p>Puedes contactar conmigo mediante el siguiente formulario o mediante mis redes sociales:</p>
         <form>
-            <label>Nombre:</label><br>
-            <input type="text"><br><br>
+            <label>Nombre:</label>
+            <input type="text">
 
+            <label>Email:</label>
+            <input type="email">
 
-            <label>Email:</label><br>
-            <input type="email"><br><br>
-
-
-            <label>Mensaje:</label><br>
-            <textarea rows="5"></textarea><br><br>
-
+            <label>Mensaje:</label>
+            <textarea rows="5"></textarea>
 
             <button>Enviar</button>
         </form>
+        
         <div class="redes-container">
-            <a href="https://www.instagram.com/nicoocruuzz_/"><img src="../imagenes/instagram.jpg" alt="Instagram" style="width:40px;"></a>
-            <a href="https://www.facebook.com/nicoocruuzz_/"><img src="../imagenes/facebook.jpg" alt="Facebook" style="width:40px;"></a>
-            <a href="https://www.x.com/nicoocruzz_/"><img src="../imagenes/x.jpg" alt="X" style="width:40px;"></a>
+            <a href="https://www.instagram.com/nicoocruuzz_/"><img src="../imagenes/instagram.jpg" alt="Instagram"></a>
+            <a href="https://www.facebook.com/nicoocruuzz_/"><img src="../imagenes/facebook.jpg" alt="Facebook"></a>
+            <a href="https://www.x.com/nicoocruzz_/"><img src="../imagenes/x.jpg" alt="X"></a>
         </div>
     </section>
 </body>
 </html>
+
+```
