--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
         <h1>Bienvenido a mi Portfolio</h1>
         <p>Hola mi nombre es Nicolás Cruz, soy estudiante de 1º de ASIR y esta es mi página web creada con HTML y CSS.</p>
     </section>
+    <footer>
+        <div class="footer-content">
+            <p>© 2026 Nicolás Cruz - Proyecto Web ASIR</p>
+            <div class="sindicacion">
+                <a href="rss.xml" target="_blank" title="Suscríbete vía RSS">
+                    <img src="imagenes/rss.jpg" alt="RSS" class="rss-icono">
+                </a>
+                <a href="atom.xml" target="_blank" title="Suscríbete vía Atom">
+                    <img src="imagenes/atom.jpg" alt="Atom" class="rss-icono atom-style">
+                </a>
+            </div>
+            <p class="rss-texto">Suscríbete a las novedades</p>
+        </div>
+    </footer>
 </body>
 </html>
