--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -15,20 +15,28 @@
         </nav>
     </header>
     <section>
-        <h1>Estudios</h1>
-        <p>A continuación, apareceran los centros por los que me he formado y de que:</p>
-        <article class="proyecto">     
-            <h2>IES Medina Azahara <img src="../imagenes/medina.jpg" class="icono" alt="icono"></h2>
-            <p>Lugar donde actualmente curso 1ºASIR y estoy aprendiendo sistemas, redes y fundamentos de programación.</p>
-        </article>
-        <article class="proyecto">
-            <h2>IES Bembezar <img src="../imagenes/bembezar.jpg" class="icono" alt="icono"></h2>
-            <p>Lugar donde adquirí formación básica previa a mis estudios actuales (4º ESO y Bachillerato).</p>
-        </article>
-        <article class="proyecto">
-            <h2>IES Miguel Durán <img src="../imagenes/miguelduran.jpg" class="icono" alt="icono"></h2>
-            <p>Lugar donde pase los primeros años de mi adolescencia (1º,2º y 3º ESO).</p>
-        </article>
+<a href="https://www.iesmedinaazahara.es/" target="_blank" class="enlace-caja">
+    <div class="proyecto">
+        <h3>IES Medina Azahara</h3>
+        <p><strong>Grado Superior ASIR</strong></p>
+        <p>Lugar donde actualmente curso 1ºASIR y estoy aprendiendo sistemas, redes y fundamentos de programación.</p>
+        <img src="../imagenes/medina_icono.png" alt="Logo Medina" class="icono">
+    </div>
+</a>
+<a href="http://iesbembezar.juntaextremadura.net/" target="_blank" class="enlace-caja">
+    <div class="proyecto">
+        <h3>IES Bembezar</h3>
+        <p><strong>Bachillerato</strong></p>
+        <p>Lugar donde adquirí formación básica previa a mis estudios actuales (4º ESO y Bachillerato).</p>
+    </div>
+</a>
+<a href="https://iesmiguelduran.educarex.es/" target="_blank" class="enlace-caja">
+    <div class="proyecto">
+        <h3>IES Miguel Durán</h3>
+        <p><strong>Educacion secundaria</strong></p>
+        <p>Lugar donde pase los primeros años de mi adolescencia (1º,2º y 3º ESO).</p>
+    </div>
+</a>
     </section>
 </body>
 </html>
