Add images for educational institutions in estudios.html

--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -20,7 +20,7 @@
         <h3>IES Medina Azahara</h3>
         <p><strong>Grado Superior ASIR</strong></p>
         <p>Lugar donde actualmente curso 1ºASIR y estoy aprendiendo sistemas, redes y fundamentos de programación.</p>
-        <img src="../imagenes/medina_icono.png" alt="Logo Medina" class="icono">
+        <img src="../imagenes/medina.jpg" class="icono">
     </div>
 </a>
 <a href="http://iesbembezar.juntaextremadura.net/" target="_blank" class="enlace-caja">
@@ -28,6 +28,7 @@
         <h3>IES Bembezar</h3>
         <p><strong>Bachillerato</strong></p>
         <p>Lugar donde adquirí formación básica previa a mis estudios actuales (4º ESO y Bachillerato).</p>
+        <img src="../imagenes/bembezar.jpg" class="icono">
     </div>
 </a>
 <a href="https://iesmiguelduran.educarex.es/" target="_blank" class="enlace-caja">
@@ -35,6 +36,7 @@
         <h3>IES Miguel Durán</h3>
         <p><strong>Educacion secundaria</strong></p>
         <p>Lugar donde pase los primeros años de mi adolescencia (1º,2º y 3º ESO).</p>
+        <img src="../imagenes/miguelduran.jpg" class="icono">
     </div>
 </a>
     </section>
