Refactor studies section with improved structure

--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -1,7 +1,7 @@
 <html lang="es">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudios</title>
     <link rel="stylesheet" href="../style/estilo.css">
 </head>
@@ -14,31 +14,37 @@
             <a href="contactos.html">Contacto</a>
         </nav>
     </header>
+
     <section>
-<a href="https://www.iesmedinaazahara.es/" target="_blank" class="enlace-caja">
-    <div class="proyecto">
-        <h3>IES Medina Azahara</h3>
-        <p><strong>Grado Superior ASIR</strong></p>
-        <p>Lugar donde actualmente curso 1ºASIR y estoy aprendiendo sistemas, redes y fundamentos de programación.</p>
-        <img src="../imagenes/medina.jpg" class="icono">
-    </div>
-</a>
-<a href="http://iesbembezar.juntaextremadura.net/" target="_blank" class="enlace-caja">
-    <div class="proyecto">
-        <h3>IES Bembezar</h3>
-        <p><strong>Bachillerato</strong></p>
-        <p>Lugar donde adquirí formación básica previa a mis estudios actuales (4º ESO y Bachillerato).</p>
-        <img src="../imagenes/bembezar.jpg" class="icono">
-    </div>
-</a>
-<a href="https://iesmiguelduran.educarex.es/" target="_blank" class="enlace-caja">
-    <div class="proyecto">
-        <h3>IES Miguel Durán</h3>
-        <p><strong>Educacion secundaria</strong></p>
-        <p>Lugar donde pase los primeros años de mi adolescencia (1º,2º y 3º ESO).</p>
-        <img src="../imagenes/miguelduran.jpg" class="icono">
-    </div>
-</a>
+        <h1>Mis Estudios</h1>
+        
+        <a href="https://www.iesmedinaazahara.es/" target="_blank" class="enlace-caja">
+            <div class="proyecto">
+                <img src="../imagenes/medina.jpg" alt="Logo IES Medina Azahara" class="icono">
+                <h3>IES Medina Azahara</h3>
+                <p><strong>Grado Superior ASIR</strong></p>
+                <p>Lugar donde actualmente curso 1º ASIR y estoy aprendiendo sistemas, redes y fundamentos de programación.</p>
+            </div>
+        </a>
+
+        <a href="https://iesbembezar.educarex.es/" target="_blank" class="enlace-caja">
+            <div class="proyecto">
+                <img src="../imagenes/bembezar.jpg" alt="Logo IES Bembezar" class="icono">
+                <h3>IES Bembezar</h3>
+                <p><strong>Bachillerato</strong></p>
+                <p>Lugar donde adquirí formación básica previa a mis estudios actuales (4º ESO y Bachillerato).</p>
+            </div>
+        </a>
+
+        <a href="https://iesmiguelduran.educarex.es/" target="_blank" class="enlace-caja">
+            <div class="proyecto">
+                <img src="../imagenes/miguelduran.jpg" alt="Logo IES Miguel Durán" class="icono">
+                <h3>IES Miguel Durán</h3>
+                <p><strong>Educación Secundaria</strong></p>
+                <p>Lugar donde pasé los primeros años de mi adolescencia (1º, 2º y 3º ESO).</p>
+            </div>
+        </a>
+
     </section>
 </body>
 </html>
