--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -36,6 +36,11 @@
             <a href="https://www.x.com/nicoocruzz_/"><img src="../imagenes/x.jpg" alt="X"></a>
         </div>
     </section>
+        <footer>
+        <div class="footer-content">
+            <p>© 2026 Nicolás Cruz - Proyecto Web ASIR</p>
+        </div>
+        </footer>
 </body>
 </html>
 
