--- a/pages/estudios.html
+++ b/pages/estudios.html
@@ -46,5 +46,10 @@
         </a>
 
     </section>
+        <footer>
+        <div class="footer-content">
+            <p>© 2026 Nicolás Cruz - Proyecto Web ASIR</p>
+        </div>
+        </footer>
 </body>
 </html>
