--- a/pages/sobremi.html
+++ b/pages/sobremi.html
@@ -20,5 +20,10 @@
     Me gusta mucho la informática y todo lo relacionado con ella.
     Actualmente resido en Ciudad Jardín (Córdoba) pero soy de un pueblo extremeño llamado Azuaga viví de pequeño en un pequeño pueblo de Guadalajara llamado Almonacid de Zorita</p>
     </section>
+    <footer>
+        <div class="footer-content">
+            <p>© 2026 Nicolás Cruz - Proyecto Web ASIR</p>
+        </div>
+    </footer>
 </body>
 </html>
